# wildfire-governance-agentic-ai

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  environment.yml  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  reproducibility_issue.md
.github/workflows/: ci.yml  docker.yml
configs/: base.yaml
configs/blockchain/: fabric_local.yaml
configs/experiments/: adversarial_robustness.yaml  paper_main_results.yaml  ppo_training.yaml  realworld_viirs.yaml  scalability_uav_fleet.yaml  stress_testing.yaml  (+1 more)
data/: README.md
docs/: blockchain_setup.md  index.md  installation.md  reproducibility.md
experiments/: 01_main_comparison.py  02_ablation_study.py  03_scalability.py  04_false_alert_rate.py  05_tradeoff_frontier.py  06_threshold_sensitivity.py  07_blockchain_throughput.py  08_viirs_california.py  08b_viirs_mediterranean.py  08c_viirs_australia.py  09_adversarial_robustness.py  10_stress_testing.py  11_ppo_training.py  11b_rl_comparison.py  12_cmdp_violation_study.py  13_sensor_noise_ablation.py  14_live_node_network.py  __init__.py  _viirs_runner.py  run_all.sh
notebooks/: 01_simulation_walkthrough.ipynb  02_results_analysis.ipynb
scripts/: check_reproducibility.sh  download_checkpoint.py  generate_paper_figures.sh  run_smoke_test.sh  setup_environment.sh
tests/: __init__.py  conftest.py
(+91 files in other folders)
